welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: illegal start of simple pattern
		case if n >= 3 => gauche()
                     ^Poucet:10: error: '=>' expected but ';' found.
		case if n <= 2 => droite()
^Poucet:10: error: illegal start of simple pattern
		case if n <= 2 => droite()
                     ^Poucet:11: error: '=>' expected but '}' found.
	}
        ^