welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while (!sortieTrouvee()) {
	do {
		var n = 0
		avance()
		if (estSurBiscuit()) {n = n + 1}
	} while (!croisement())
	n match {
		case if n >= 3 => gauche()
		case if n <= 2 => droite()
	}
}
